<resources>
  <string name="app_name">BluetoothLamp</string>
  <string name="visibility">打开可见</string>
  <string name="find_device">查找设备</string>
  <string name="bonded_device">已绑定设备</string>
  <string name="waiting">等待连接</string>
  <string name="stop_waiting">停止监听</string>
  <string name="disconnect">断开</string>
  <string name="hello">Hello</string>
  <string name="hi">Hi</string>
  <string name="send">发送</string>
</resources>
