<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
  <item
      android:id="@+id/enable_visibility"
      android:orderInCategory="100"
      android:title="@string/visibility"

      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/find_device"
      android:orderInCategory="100"
      android:title="@string/find_device"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/bonded_device"
      android:orderInCategory="100"
      android:title="@string/bonded_device"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/listening"
      android:orderInCategory="100"
      android:title="@string/waiting"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/stop_listening"
      android:orderInCategory="100"
      android:title="@string/stop_waiting"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/disconnect"
      android:orderInCategory="100"
      android:title="@string/disconnect"
      app:showAsAction="ifRoom"/>
</menu>
